--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 <head>
     <head>
       <title>Master Class Machine Learning</title>
-      <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
+      <script async src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
