resize card on small screen

--- a/site/index.html
+++ b/site/index.html
@@ -167,7 +167,7 @@
           </div>
       </section> 
       <section id="aboutme" class="p-5">
-        <div class="card border-dark mx-auto w-50" style="max-width: 50rem" id="meme">
+        <div class="card border-dark mx-auto col-lg-6 col-sm-10" id="meme">
             <div class="card-body">
               <h5 class="card-title display-4">
                 <img class="mr-3" src="meme.png" alt="Meme">
