--- a/site/index.html
+++ b/site/index.html
@@ -187,7 +187,7 @@
                 </p>
               </div>
             </div>
-            <img class="card-img-bottom lazy" src="placeholder-aboutme.png" data-src="aboutme-lazy-load-1x.png" data-srcset="aboutme-lazy-load-2x.png 2x, aboutme-lazy-load-1x.png 1x" alt="Card image cap">
+            <img class="card-img-bottom lazy mb-3" src="placeholder-aboutme.png" data-src="aboutme-lazy-load-1x.png" data-srcset="aboutme-lazy-load-2x.png 2x, aboutme-lazy-load-1x.png 1x" alt="Card image cap">
           </div>
       </section>     
     </div>
