--- a/site/index.html
+++ b/site/index.html
@@ -23,7 +23,7 @@
           <div class="container">
             <h1 class="display-4">Leren hoe Machine Learning werkt?</h1>
             <p class="lead">
-              Kom dan op 19 november 2019 naar de Masterclass INTRO 2 ML van Witek ten Hove.<br>
+              Kom dan op 19 november 2019 naar de Masterclass INTRO 2 ML van <a href="#aboutme">Witek ten Hove</a><br>
               Tijd: 16:00u<br>
               Locatie: QING Groep
             </p>
