--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
           Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
           van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
           De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
-          Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
+          Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevat.
           Zelfs onze evolutie kan nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
         </p>
         <br>
