--- a/site/index.html
+++ b/site/index.html
@@ -132,7 +132,7 @@
                         In het kader hiernaast zie je een live voorbeeld.
                         Als je op de knop drukt wordt de foto door een ML-model geanalyseerd en het object geïdentificeerd.
                         Het model is al eerder <a href="http://www.image-net.org/about-stats" target=_blank>elders</a> getraind op basis van meer dan 14 mln foto's.
-                        Het model kan 21.000+ verschillende objecten uit 27 categorieën detecteren.
+                        en kan 21.000+ verschillende objecten uit 27 categorieën detecteren.
                       </p>
                       <p>
                         Het voorbeeld toont aan hoe makkelijk het inmiddels is om ML te integreren in een applicatie. 
