--- a/site/index.html
+++ b/site/index.html
@@ -87,8 +87,8 @@
                             <td><span class=" checkmark align-middle"></span>Competent practitioners - know what they don’t know</td>
                         </tr>
                         <tr>
-                            <th scope="row"><span class="checkmark">&#x2610</span></th>
-                            <td><span class=" checkmark align-middle"></span>Experts - have mental models that include exceptions and special cases and can handle situations that are out of the ordinary</td>
+                            <th class="text-muted" scope="row"><span class="checkmark">&#x2610</span></th>
+                            <td class="text-muted"><span class=" checkmark align-middle"></span>Experts - have mental models that include exceptions and special cases and can handle situations that are out of the ordinary</td>
                         </tr>
                       </tbody>
                     </table>
